<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Appearance">


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="animation_pref"
            android:summary="@string/list_prefs_summ_animations"
            android:title="Enable Animations" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_category_hashing">

        <ListPreference android:title="@string/list_prefs_title_hashing"
            android:summary="@string/list_prefs_summ_hashing"
            android:key="@string/list_prefs_key_hashing"
            android:defaultValue="@string/list_prefs_default_hashing"
            android:entries="@array/hashAlgoArray"
            android:entryValues="@array/hashAlgoArray"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_category_encryption">

        <ListPreference android:title="@string/list_prefs_title_encryption"
            android:summary="@string/list_prefs_summ_encryption"
            android:key="@string/list_prefs_key_encryption"
            android:defaultValue="@string/list_prefs_default_encryption"
            android:entries="@array/encryptAlgoArray"
            android:entryValues="@array/encryptAlgoArrayValue" />

    </PreferenceCategory>


</PreferenceScreen>
